--- a/VtolLobbyManager/VtolLobbyManager.csproj
+++ b/VtolLobbyManager/VtolLobbyManager.csproj
@@ -20,4 +20,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Websocket.Client" Version="4.4.43" />
+  </ItemGroup>
+
 </Project>
